# hexagon

./: Cargo.toml  Procfile  workspace.code-workspace
hexagon-client/: Cargo.toml  build_vercel.sh  index.html
hexagon-client/src/: app.rs  main.rs
hexagon-client/src/agent/: anim_agent.rs  mod.rs  notification_agent.rs  socket_agent.rs
hexagon-client/src/components/: avatar.rs  backdrop.rs  game.rs  hex_board.rs  home.rs  mod.rs  notification_widget.rs  peer.rs  room.rs
hexagon-client/src/ui/: mod.rs
hexagon-client/styles/: dark.css  main.scss  ui.scss
hexagon-server/: Cargo.toml  err
hexagon-server/src/: main.rs  structures.rs
hexagon-shared/: Cargo.toml
hexagon-shared/src/: lib.rs
hexagon-shared/src/board/: mod.rs
hexagon-shared/src/colors/: colors.rs
hexagon-shared/src/models/: mod.rs
hexagon-shared/src/structures/: mod.rs
hs/: Cargo.toml
