[package]
name = "hexagon-client"
version = "0.1.0"
authors = ["deep-gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
gloo = "0.2"
yewtil = "0.3"
wasm-logger = "0.2"
log = "0.4"
hexagon-shared = {path="../hexagon-shared"}

[dependencies.web-sys]
version = "0.3"
features = [
    'HtmlInputElement',
    'FileList',
    'File',
    'FileReader',
    'HtmlTextAreaElement',
    'Blob',
    'Url',
]