[package]
name = "hexagon-server"
version = "0.1.0"
authors = ["deep-gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4"
# hexagon-shared = {path="../hexagon-shared"}
tokio = { version = "1", features = ["full"] }
# warp = "0.3"