[package]
name = "hexagon-shared"
version = "0.1.0"
authors = ["deep-gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = {version="1.0",features=["derive"]}
strum = { version = "0.20", features = ["derive"] }
itertools = "0.10"
rand = "0.8"